tests/variables/errors/var_not_declared.c.res
[36mERROR: Variable not declared[0m [4min line 3
[0m    a = 23.2;
    ^
[1m[31mCompilation failed with 1 errors
[0m